--- a/Track/src/main/resources/message/messages.properties
+++ b/Track/src/main/resources/message/messages.properties
@@ -6,3 +6,4 @@ exception.invalid.serialize                = \uC9C1\uB82C\uD654\uC5D0 \uC2E4\uD3
 
 #TRACK
 track.error.websocket.connect              = \uC6F9\uC18C\uCF13 \uC5F0\uACB0\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB85C\uADF8\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
+track.error.signal.check                   = \uC2DC\uADF8\uB110 \uCCB4\uD06C\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB85C\uADF8\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
