:recycle: 예외코드 재정리

--- a/Track/src/main/resources/message/messages.properties
+++ b/Track/src/main/resources/message/messages.properties
@@ -7,3 +7,6 @@ exception.invalid.serialize                = \uC9C1\uB82C\uD654\uC5D0 \uC2E4\uD3
 #TRACK
 track.error.websocket.connect              = \uC6F9\uC18C\uCF13 \uC5F0\uACB0\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB85C\uADF8\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
 track.error.signal.check                   = \uC2DC\uADF8\uB110 \uCCB4\uD06C\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB85C\uADF8\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
+track.required.candlestick                 = \uCE94\uB4E4\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.
+track.required.moveaverage                 = \uC774\uB3D9\uD3C9\uADE0\uAC12\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.
+track.required.closeprice                  = \uC885\uAC00\uAC00 \uD544\uC694\uD569\uB2C8\uB2E4.
